增加单位和用户保存到数据的功能

--- a/AgricultureR/css/custom427.css
+++ b/AgricultureR/css/custom427.css
@@ -5,6 +5,11 @@ html,body{
 	padding: 0;
 	overflow: hidden;
 }
+form ul li:hover{
+	cursor: pointer !important;
+	background-color: #F8F8F8;
+	
+}
 .banner{
 	width: 100%;
 	background-color: #229a56;
