--- a/AgricultureR/css/custom427.css
+++ b/AgricultureR/css/custom427.css
@@ -5,6 +5,9 @@ html,body{
 	padding: 0;
 	overflow: hidden;
 }
+form{
+	background-color: #f8f8f8 !important;
+}
 form ul li:hover{
 	cursor: pointer !important;
 	background-color: #F8F8F8;
@@ -19,7 +22,7 @@ form ul li:hover{
 	width: 100%;
 	height: 40px;
 	background-color: #229A56;
-	/*position: fixed;*/
+	position: fixed;
 	bottom: 0px;
 	text-align: center;
 	color: #FFFFFF;
@@ -137,7 +140,7 @@ form ul li:hover{
 	position: absolute;
 	margin: 50px auto;
 	width: 95%;
-	z-index: 5299;
+	/*z-index: 5299;*/
 	top: 45px;
 	left: 2.5%;
 	
@@ -334,7 +337,7 @@ form ul li:hover{
 	position: relative;
 	top: 15px;
 }
-#countySpan{
+.countySpan span{
 	padding: 10px;
 	text-align: center;
 	font-family: "微软雅黑";
@@ -485,8 +488,29 @@ button:hover{
     border:1px solid #94a0b4;
     color:#000
 }
+.modal{
+	
+}
+.modal-header{
+	background-color: #229A56;
+	font-size: 1.3em;
+	color: white;
+}
+.modal-body{
+	font-size: 1.2em;
+	text-align: center;
+}
 
-
+.formBottom{
+	padding-left: 15%;
+	margin-left: 5em;
+	padding-right: 15%;
+	margin-right: 5em;
+	padding-bottom:1em ;
+}
+.sjbchushen{
+	margin: auto;
+}
 
 
 
