--- a/AgricultureR/css/login.css
+++ b/AgricultureR/css/login.css
@@ -64,3 +64,10 @@ html,body{
 				height: 160px;
 				font-size: 2.0em;
 			}
+			.error{
+				text-align: center;
+				color: red;
+				margin: 10px auto;
+				font-size: 1.2em;
+				width: 100%;
+			}
